overflow fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,6 @@ body {
     background: #1cb3c8;
     color: #3c415e;
     font-family: 'Abel', sans-serif;
-    overflow: hidden;
 }
 
 
